Added the observer pattern for the auction, took care of some logic flaws and missing pieces